fix image spacing

--- a/src/components/section/section.module.scss
+++ b/src/components/section/section.module.scss
@@ -1,7 +1,6 @@
 .section {
   display: flex;
   flex-direction: column;
-  align-items: center;
   gap: var(--space-lg);
 
   h3 {
@@ -26,8 +25,10 @@
 
   img {
     max-width: 100%;
+    max-height: 400px;
+
+    align-self: center;
     object-fit: cover;
     border-radius: var(--border-radius);
-    max-height: 400px;
   }
 }
